package root

import (
	"context"
	"fmt"
	"io"
	"net/http"
	"os"
	"os/signal"
	"syscall"

	"connectrpc.com/connect"
	backendv1 "github.com/project-planton/project-planton/app/backend/apis/gen/go/proto"
	"github.com/project-planton/project-planton/app/backend/apis/gen/go/proto/backendv1connect"
	"github.com/spf13/cobra"
)

var StackJobStreamOutputCmd = &cobra.Command{
	Use:   "stack-job:stream-output",
	Short: "stream real-time output from a stack job",
	Long:  "Stream real-time deployment logs from a stack job. Shows stdout and stderr output as it's generated during deployment.",
	Run:   stackJobStreamOutputHandler,
}

func init() {
	StackJobStreamOutputCmd.Flags().StringP("id", "i", "", "unique identifier of the stack job (required)")
	StackJobStreamOutputCmd.Flags().Int32P("last-sequence", "s", 0, "last sequence number received (for resuming stream from a specific point)")
	StackJobStreamOutputCmd.MarkFlagRequired("id")
}

func stackJobStreamOutputHandler(cmd *cobra.Command, args []string) {
	// Get stack job ID
	jobID, _ := cmd.Flags().GetString("id")
	if jobID == "" {
		fmt.Println("Error: --id flag is required. Provide the stack job ID")
		fmt.Println("Usage: project-planton stack-job:stream-output --id=<stack-job-id>")
		os.Exit(1)
	}

	// Get last sequence number (optional)
	lastSequenceNum, _ := cmd.Flags().GetInt32("last-sequence")

	// Get backend URL from configuration
	backendURL, err := GetBackendURL()
	if err != nil {
		fmt.Printf("Error: %v\n", err)
		os.Exit(1)
	}

	// Create Connect-RPC client
	client := backendv1connect.NewStackJobServiceClient(
		http.DefaultClient,
		backendURL,
	)

	// Prepare request
	req := &backendv1.StreamStackJobOutputRequest{
		JobId: jobID,
	}
	if lastSequenceNum > 0 {
		req.LastSequenceNum = &lastSequenceNum
	}

	// Create context with cancellation support
	ctx, cancel := context.WithCancel(context.Background())
	defer cancel()

	// Handle interrupt signal for graceful shutdown
	sigChan := make(chan os.Signal, 1)
	signal.Notify(sigChan, os.Interrupt, syscall.SIGTERM)
	go func() {
		<-sigChan
		fmt.Println("\n\n‚ö†Ô∏è  Interrupt received, stopping stream...")
		cancel()
	}()

	// Start streaming
	fmt.Printf("üöÄ Streaming output for stack job: %s\n", jobID)
	if lastSequenceNum > 0 {
		fmt.Printf("   Resuming from sequence: %d\n", lastSequenceNum)
	}
	fmt.Println()

	stream, err := client.StreamStackJobOutput(ctx, connect.NewRequest(req))
	if err != nil {
		if connect.CodeOf(err) == connect.CodeUnavailable {
			fmt.Printf("‚ùå Error: Cannot connect to backend service at %s. Please check:\n", backendURL)
			fmt.Printf("  1. The backend service is running\n")
			fmt.Printf("  2. The backend URL is correct\n")
			fmt.Printf("  3. Network connectivity\n")
			os.Exit(1)
		}
		if connect.CodeOf(err) == connect.CodeNotFound {
			fmt.Printf("‚ùå Error: Stack job with ID '%s' not found\n", jobID)
			os.Exit(1)
		}
		fmt.Printf("‚ùå Error starting stream: %v\n", err)
		os.Exit(1)
	}

	// Track statistics
	messageCount := 0
	lastSequence := int32(0)

	// Iterate over the stream
	for stream.Receive() {
		response := stream.Msg()
		messageCount++
		lastSequence = response.SequenceNum

		// Format timestamp
		timestamp := "N/A"
		if response.Timestamp != nil {
			timestamp = response.Timestamp.AsTime().Format("15:04:05.000")
		}

		// Determine stream type prefix and color
		streamPrefix := "[stdout]"
		if response.StreamType == "stderr" {
			streamPrefix = "[stderr]"
		}

		// Display the message
		fmt.Printf("[%s] %s [Seq: %d] %s\n",
			timestamp,
			streamPrefix,
			response.SequenceNum,
			response.Content,
		)

		// Check if stream is completed
		if response.Status == "completed" {
			fmt.Printf("\n‚úÖ Stream completed successfully\n")
			break
		}

		// Check if stream failed
		if response.Status == "failed" {
			fmt.Printf("\n‚ùå Stream failed\n")
			break
		}

		// Check if context was cancelled
		if ctx.Err() != nil {
			fmt.Printf("\n‚ö†Ô∏è  Stream cancelled\n")
			break
		}
	}

	// Check for stream errors
	if err := stream.Err(); err != nil {
		if err == io.EOF {
			// EOF is normal when stream completes
			fmt.Printf("\nüìä Total messages received: %d (last sequence: %d)\n", messageCount, lastSequence)
			return
		}
		if connect.CodeOf(err) == connect.CodeCanceled {
			fmt.Printf("\n‚ö†Ô∏è  Stream was cancelled\n")
			fmt.Printf("üìä Total messages received: %d (last sequence: %d)\n", messageCount, lastSequence)
			return
		}
		fmt.Printf("\n‚ùå Stream error: %v\n", err)
		os.Exit(1)
	}

	fmt.Printf("\nüìä Total messages received: %d (last sequence: %d)\n", messageCount, lastSequence)
}
